Rota de documentação finalizada

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,9 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>API REFERENCE</title>
 </head>
 <body>
-    
+    <h1>Documentação da API</h1>
+    <h2> [GET] End Points</h2>
+    <ul>
+        <li>/help</li>
+        <li>/data</li>
+        <li>/getuser/{name}</li>
+    </ul>
+    <h2> [POST] End Point</h2>
+    <ul>
+        <li>/send</li>
+    </ul>
+    <h2> [PUT] End Point</h2>
+    <ul>
+        <li>/update/{id}</li>
+    </ul>
+    <h2> [DELETE] End Point</h2>
+    <ul>
+        <li>/delete/{id}</li>
+    </ul>
 </body>
 </html>
